name:                gl-scene-camera
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/gl-scene-camera#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scene.Camera
  build-depends:       base >= 4.7 && < 5
                     , flow
                     , gl
                     , gl-scene-math
                     , lens
                     , linear
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/psandahl/gl-scene-camera
